@@ -17,5 +17,6 @@
 		<property name="Show cards for preview" nameLabel="gamememo_property_show_cards_for_preview" type="boolean" />
         <property name="Is Not Activity" nameLabel="gamememo_property_is_not_activity" type="boolean" />
         <property name="Image Mode" nameLabel="gamememo_property_image_mode" type="{Original, Stretch, KeepAspect}"/>
+        <property name="Keep wrong marking" nameLabel="gamememo_property_keep_wrong_marking" type="boolean" />
 	</model>
 </addon>
