@@ -677,6 +677,7 @@ var ice_dictionary_mx = {
 	"gamememo_property_keep_cards_aspect_ratio": "Mantener relación de aspecto de las tarjetas",
 	"gamememo_property_show_cards_for_preview": "Mostrar cartas para obtener una vista preliminar",
 	"gamememo_property_image_mode": "Modo de Imagen",
+    "gamememo_property_keep_wrong_marking": "Keep wrong marking",
 	"MultiAudio_info": "Es una versión mejorada del addon Audio que ha sido enriquecido con nuevas características, tales como subir varios archivos de audio, lo que permite bucle de cada archivo de forma individual, saltar entre los archivos y mejorada selección de la interfaz.",
 	"MultiAudio_name": "MultiAudio",
 	"MultiAudio_property_files": "Archivo",
