@@ -676,6 +676,7 @@
 	"gamememo_property_keep_cards_aspect_ratio" : "Zachowaj w kartach współczynnik proporcji",
 	"gamememo_property_show_cards_for_preview" : "Pokaż karty w podglądzie",
     "gamememo_property_image_mode": "Tryb obrazka",
+    "gamememo_property_keep_wrong_marking": "Keep wrong marking",
 	"MultiAudio_info" : "Jest to rozszerzona wersja Addonu dźwiękowego, wzbogacona o nowe funkcje, takie jak możliwość wgrania wielu plików audio, włączenie zapętlenia dla każdego pliku osobno oraz przeskakiwanie między plikami.",
 	"MultiAudio_name" : "Wielokrotne pliki dźwiękowe",
 	"MultiAudio_property_files": "Pliki",
